--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -984,6 +984,7 @@ section .hero {
   margin: 0;
   font-size: 16px;
   color: color-mix(in srgb, var(--default-color), transparent 25%);
+  margin-bottom: var(--space-2)
 }
 
 .about .skills-wrap .skill-item:hover {
