removed unused starter sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3522,6 +3522,5 @@ section .hero {
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
-}
+/* .starter-section {
+} */
